@@ -29,41 +29,29 @@ import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyMap;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Properties;
-
-import javax.naming.ConfigurationException;
 
 import org.apache.cloudstack.api.ApiConstants;
-import org.apache.cloudstack.extension.Extension;
+import org.apache.cloudstack.framework.extensions.manager.ExtensionsFilesystemManager;
 import org.apache.cloudstack.framework.extensions.manager.ExtensionsManager;
 import org.apache.logging.log4j.Logger;
-import org.junit.After;
-import org.junit.Assume;
-import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockedStatic;
-import org.mockito.Mockito;
 import org.mockito.Spy;
 import org.mockito.junit.MockitoJUnitRunner;
-import org.springframework.test.util.ReflectionTestUtils;
 
 import com.cloud.agent.api.GetExternalConsoleAnswer;
 import com.cloud.agent.api.GetExternalConsoleCommand;
@@ -85,11 +73,9 @@ import com.cloud.host.dao.HostDao;
 import com.cloud.hypervisor.Hypervisor;
 import com.cloud.hypervisor.HypervisorGuru;
 import com.cloud.hypervisor.HypervisorGuruManager;
+import com.cloud.serializer.GsonHelper;
 import com.cloud.template.VirtualMachineTemplate;
-import com.cloud.utils.FileUtil;
 import com.cloud.utils.Pair;
-import com.cloud.utils.PropertiesUtil;
-import com.cloud.utils.script.Script;
 import com.cloud.vm.UserVmVO;
 import com.cloud.vm.VirtualMachine;
 import com.cloud.vm.VirtualMachineProfile;
@@ -121,59 +107,8 @@ public class ExternalPathPayloadProvisionerTest {
     @Mock
     private ExtensionsManager extensionsManager;
 
-    private File tempDir;
-    private File tempDataDir;
-    private Properties testProperties;
-    private File testScript;
-
-    @Before
-    public void setUp() throws IOException {
-        tempDir = Files.createTempDirectory("extensions-test").toFile();
-        tempDataDir = Files.createTempDirectory("extensions-data-test").toFile();
-
-        testScript = new File(tempDir, "test-extension.sh");
-        testScript.createNewFile();
-        resetTestScript();
-
-        testProperties = new Properties();
-        testProperties.setProperty("extensions.deployment.mode", "developer");
-
-        ReflectionTestUtils.setField(provisioner, "extensionsDirectory", tempDir.getAbsolutePath());
-        ReflectionTestUtils.setField(provisioner, "extensionsDataDirectory", tempDataDir.getAbsolutePath());
-
-        try (MockedStatic<PropertiesUtil> propertiesUtilMock = Mockito.mockStatic(PropertiesUtil.class)) {
-            File mockPropsFile = mock(File.class);
-            propertiesUtilMock.when(() -> PropertiesUtil.findConfigFile(anyString())).thenReturn(mockPropsFile);
-        }
-    }
-
-    @After
-    public void tearDown() {
-        if (tempDir != null && tempDir.exists()) {
-            deleteDirectory(tempDir);
-        }
-        if (tempDataDir != null && tempDataDir.exists()) {
-            deleteDirectory(tempDataDir);
-        }
-    }
-
-    private void deleteDirectory(File dir) {
-        if (dir.isDirectory()) {
-            File[] files = dir.listFiles();
-            if (files != null) {
-                for (File file : files) {
-                    deleteDirectory(file);
-                }
-            }
-        }
-        dir.delete();
-    }
-
-    private void resetTestScript() {
-        testScript.setExecutable(true);
-        testScript.setReadable(true);
-        testScript.setWritable(true);
-    }
+    @Mock
+    private ExtensionsFilesystemManager extensionsFilesystemManager;
 
     @Test
     public void testLoadAccessDetails() {
@@ -221,121 +156,33 @@ public class ExternalPathPayloadProvisionerTest {
         assertNull(result.get(VmDetailConstants.CLOUDSTACK_VM_DETAILS));
     }
 
-    @Test
-    public void testGetExtensionCheckedPathValidFile() {
-        String result = provisioner.getExtensionCheckedPath("test-extension", "test-extension.sh");
-
-        assertEquals(testScript.getAbsolutePath(), result);
-    }
-
-    @Test
-    public void testGetExtensionCheckedPathFileNotExists() {
-        String result = provisioner.getExtensionCheckedPath("test-extension", "nonexistent.sh");
-
-        assertNull(result);
-    }
-
-    @Test
-    public void testGetExtensionCheckedPathNoExecutePermissions() {
-        testScript.setExecutable(false);
-        String result = provisioner.getExtensionCheckedPath("test-extension", "test-extension.sh");
-        assertNull(result);
-        Mockito.verify(logger).error("{} is not executable", "Entry point [" + testScript.getAbsolutePath() + "] for extension: test-extension");
-    }
-
-    @Test
-    public void testGetExtensionCheckedPathNoReadPermissions() {
-        testScript.setWritable(false);
-        testScript.setReadable(false);
-        Assume.assumeFalse("Skipping test as file can not be marked unreadable", testScript.canRead());
-        String result = provisioner.getExtensionCheckedPath("test-extension", "test-extension.sh");
-        assertNull(result);
-        Mockito.verify(logger).error("{} is not readable", "Entry point [" + testScript.getAbsolutePath() + "] for extension: test-extension");
-    }
-
-    @Test
-    public void testCheckExtensionsDirectoryValid() {
-        boolean result = provisioner.checkExtensionsDirectory();
-        assertTrue(result);
-    }
-
-    @Test
-    public void testCheckExtensionsDirectoryInvalid() {
-        ReflectionTestUtils.setField(provisioner, "extensionsDirectory", "/nonexistent/path");
-
-        boolean result = provisioner.checkExtensionsDirectory();
-        assertFalse(result);
-    }
-
-    @Test
-    public void testCreateOrCheckExtensionsDataDirectory() throws ConfigurationException {
-        provisioner.createOrCheckExtensionsDataDirectory();
-        Mockito.verify(logger).info("Extensions data directory path: {}", tempDataDir.getAbsolutePath());
-    }
-
-    @Test(expected = ConfigurationException.class)
-    public void testCreateOrCheckExtensionsDataDirectoryCreateThrowsExceptionFail() throws ConfigurationException {
-        ReflectionTestUtils.setField(provisioner, "extensionsDataDirectory", "/nonexistent/path");
-        try(MockedStatic<Files> filesMock = Mockito.mockStatic(Files.class)) {
-            filesMock.when(() -> Files.createDirectories(any())).thenThrow(new IOException("fail"));
-            provisioner.createOrCheckExtensionsDataDirectory();
-        }
-    }
-
-    @Test(expected = ConfigurationException.class)
-    public void testCreateOrCheckExtensionsDataDirectoryNoCreateFail() throws ConfigurationException {
-        ReflectionTestUtils.setField(provisioner, "extensionsDataDirectory", "/nonexistent/path");
-        try(MockedStatic<Files> filesMock = Mockito.mockStatic(Files.class)) {
-            filesMock.when(() -> Files.createDirectories(any())).thenReturn(mock(Path.class));
-            provisioner.createOrCheckExtensionsDataDirectory();
-        }
-    }
-
-    @Test
-    public void testGetExtensionPath() {
-        String result = provisioner.getExtensionPath("test-extension.sh");
-        String expected = tempDir.getAbsolutePath() + File.separator + "test-extension.sh";
-        assertEquals(expected, result);
-    }
-
-    @Test
-    public void testGetChecksumForExtensionPath() {
-        String result = provisioner.getChecksumForExtensionPath("test-extension", "test-extension.sh");
-
-        assertNotNull(result);
-    }
-
-    @Test
-    public void testGetChecksumForExtensionPath_InvalidFile() {
-        String result = provisioner.getChecksumForExtensionPath("test-extension", "nonexistent.sh");
-
-        assertNull(result);
+    private String setupCheckedExtensionPath() {
+        String path = "test-extension.sh";
+        when(extensionsFilesystemManager.getExtensionCheckedPath(anyString(), anyString())).thenReturn(path);
+        return path;
     }
 
     @Test
     public void testPrepareExternalProvisioning() {
-        try (MockedStatic<Script> scriptMock = Mockito.mockStatic(Script.class)) {
-            scriptMock.when(() -> Script.findScript(anyString(), anyString())).thenReturn(testScript.getAbsolutePath());
+        String path = setupCheckedExtensionPath();
+        PrepareExternalProvisioningCommand cmd = mock(PrepareExternalProvisioningCommand.class);
+        VirtualMachineTO vmTO = new VirtualMachineTO(1, "test-vm", VirtualMachine.Type.User, 1, 1000, 256,
+                512, VirtualMachineTemplate.BootloaderType.HVM, "OS", false, false, "Pass");
+        vmTO.setUuid("test-uuid");
 
-            PrepareExternalProvisioningCommand cmd = mock(PrepareExternalProvisioningCommand.class);
-            VirtualMachineTO vmTO = new VirtualMachineTO(1, "test-vm", VirtualMachine.Type.User, 1, 1000, 256,
-                    512, VirtualMachineTemplate.BootloaderType.HVM, "OS", false, false, "Pass");
-            vmTO.setUuid("test-uuid");
+        when(cmd.getVirtualMachineTO()).thenReturn(vmTO);
+        when(cmd.getExternalDetails()).thenReturn(new HashMap<>());
+        when(cmd.getWait()).thenReturn(30);
 
-            when(cmd.getVirtualMachineTO()).thenReturn(vmTO);
-            when(cmd.getExternalDetails()).thenReturn(new HashMap<>());
-            when(cmd.getWait()).thenReturn(30);
-
-            doReturn(new Pair<>(true, "{\"nics\":[{\"uuid\":\"test-net-uuid\",\"mac\":\"00:00:00:01:02:03\"}]}")).when(provisioner)
+        doReturn(new Pair<>(true, "{\"nics\":[{\"uuid\":\"test-net-uuid\",\"mac\":\"00:00:00:01:02:03\"}]}")).when(provisioner)
                 .executeExternalCommand(anyString(), anyString(), anyMap(), anyInt(), anyString(), anyString());
 
-            PrepareExternalProvisioningAnswer answer = provisioner.prepareExternalProvisioning(
-                "host-name", "test-extension", "test-extension.sh", cmd);
+        PrepareExternalProvisioningAnswer answer = provisioner.prepareExternalProvisioning(
+                "host-name", "test-extension", path, cmd);
 
-            assertTrue(answer.getResult());
-            assertEquals("test-net-uuid", answer.getVirtualMachineTO().getNics()[0].getNetworkUuid());
-            assertEquals("00:00:00:01:02:03", answer.getVirtualMachineTO().getNics()[0].getMac());
-        }
+        assertTrue(answer.getResult());
+        assertEquals("test-net-uuid", answer.getVirtualMachineTO().getNics()[0].getNetworkUuid());
+        assertEquals("00:00:00:01:02:03", answer.getVirtualMachineTO().getNics()[0].getMac());
     }
 
     @Test
@@ -354,6 +201,7 @@ public class ExternalPathPayloadProvisionerTest {
 
     @Test
     public void testStartInstance() {
+        String path = setupCheckedExtensionPath();
         StartCommand cmd = mock(StartCommand.class);
         VirtualMachineTO vmTO = mock(VirtualMachineTO.class);
         when(vmTO.getUuid()).thenReturn("test-uuid");
@@ -364,14 +212,15 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(true, "{\"status\": \"success\", \"message\": \"Instance started\"}")).when(provisioner)
             .executeExternalCommand(anyString(), anyString(), anyMap(), anyInt(), anyString(), anyString());
 
-        StartAnswer answer = provisioner.startInstance("host-name", "test-extension", "test-extension.sh", cmd);
+        StartAnswer answer = provisioner.startInstance("host-name", "test-extension", path, cmd);
 
         assertTrue(answer.getResult());
-        Mockito.verify(logger).debug("Starting VM test-uuid on the external system");
+        verify(logger).debug("Starting VM test-uuid on the external system");
     }
 
     @Test
     public void testStartInstanceDeploy() {
+        String path = setupCheckedExtensionPath();
         StartCommand cmd = mock(StartCommand.class);
         VirtualMachineTO vmTO = mock(VirtualMachineTO.class);
         when(vmTO.getUuid()).thenReturn("test-uuid");
@@ -385,14 +234,15 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(true, "{\"status\": \"success\", \"message\": \"Instance started\"}")).when(provisioner)
                 .executeExternalCommand(anyString(), anyString(), anyMap(), anyInt(), anyString(), anyString());
 
-        StartAnswer answer = provisioner.startInstance("host-name", "test-extension", "test-extension.sh", cmd);
+        StartAnswer answer = provisioner.startInstance("host-name", "test-extension", path, cmd);
 
         assertTrue(answer.getResult());
-        Mockito.verify(logger).debug("Deploying VM test-uuid on the external system");
+        verify(logger).debug("Deploying VM test-uuid on the external system");
     }
 
     @Test
     public void testStartInstanceError() {
+        String path = setupCheckedExtensionPath();
         StartCommand cmd = mock(StartCommand.class);
         VirtualMachineTO vmTO = mock(VirtualMachineTO.class);
         when(vmTO.getUuid()).thenReturn("test-uuid");
@@ -403,15 +253,16 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(false, "{\"error\": \"Instance failed to start\"}")).when(provisioner)
                 .executeExternalCommand(anyString(), anyString(), anyMap(), anyInt(), anyString(), anyString());
 
-        StartAnswer answer = provisioner.startInstance("host-name", "test-extension", "test-extension.sh", cmd);
+        StartAnswer answer = provisioner.startInstance("host-name", "test-extension", path, cmd);
 
         assertFalse(answer.getResult());
         assertEquals("{\"error\": \"Instance failed to start\"}", answer.getDetails());
-        Mockito.verify(logger).debug("Starting VM test-uuid on the external system failed: {\"error\": \"Instance failed to start\"}");
+        verify(logger).debug("Starting VM test-uuid on the external system failed: {\"error\": \"Instance failed to start\"}");
     }
 
     @Test
     public void testStopInstance() {
+        String path = setupCheckedExtensionPath();
         StopCommand cmd = mock(StopCommand.class);
         VirtualMachineTO vmTO = mock(VirtualMachineTO.class);
         when(vmTO.getUuid()).thenReturn("test-uuid");
@@ -422,13 +273,14 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(true, "success")).when(provisioner)
             .executeExternalCommand(anyString(), anyString(), anyMap(), anyInt(), anyString(), anyString());
 
-        StopAnswer answer = provisioner.stopInstance("host-name", "test-extension", "test-extension.sh", cmd);
+        StopAnswer answer = provisioner.stopInstance("host-name", "test-extension", path, cmd);
 
         assertTrue(answer.getResult());
     }
 
     @Test
     public void testRebootInstance() {
+        String path = setupCheckedExtensionPath();
         RebootCommand cmd = mock(RebootCommand.class);
         VirtualMachineTO vmTO = mock(VirtualMachineTO.class);
         when(vmTO.getUuid()).thenReturn("test-uuid");
@@ -439,13 +291,14 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(true, "success")).when(provisioner)
             .executeExternalCommand(anyString(), anyString(), anyMap(), anyInt(), anyString(), anyString());
 
-        RebootAnswer answer = provisioner.rebootInstance("host-name", "test-extension", "test-extension.sh", cmd);
+        RebootAnswer answer = provisioner.rebootInstance("host-name", "test-extension", path, cmd);
 
         assertTrue(answer.getResult());
     }
 
     @Test
     public void testExpungeInstance() {
+        String path = setupCheckedExtensionPath();
         StopCommand cmd = mock(StopCommand.class);
         VirtualMachineTO vmTO = mock(VirtualMachineTO.class);
         when(vmTO.getUuid()).thenReturn("test-uuid");
@@ -456,13 +309,14 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(true, "success")).when(provisioner)
             .executeExternalCommand(anyString(), anyString(), anyMap(), anyInt(), anyString(), anyString());
 
-        StopAnswer answer = provisioner.expungeInstance("host-name", "test-extension", "test-extension.sh", cmd);
+        StopAnswer answer = provisioner.expungeInstance("host-name", "test-extension", path, cmd);
 
         assertTrue(answer.getResult());
     }
 
     @Test
     public void testGetHostVmStateReport() {
+        String path = setupCheckedExtensionPath();
         HostVO host = mock(HostVO.class);
         when(hostDao.findById(anyLong())).thenReturn(host);
 
@@ -482,7 +336,7 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(true, "PowerOn")).when(provisioner)
             .executeExternalCommand(anyString(), anyString(), anyMap(), anyInt(), anyString(), anyString());
 
-        Map<String, HostVmStateReportEntry> result = provisioner.getHostVmStateReport(1L, "test-extension", "test-extension.sh");
+        Map<String, HostVmStateReportEntry> result = provisioner.getHostVmStateReport(1L, "test-extension", path);
 
         assertNotNull(result);
         assertEquals(1, result.size());
@@ -491,15 +345,17 @@ public class ExternalPathPayloadProvisionerTest {
 
     @Test
     public void testGetHostVmStateReportHostNotFound() {
-        Map<String, HostVmStateReportEntry> result = provisioner.getHostVmStateReport(1L, "test-extension", "test-extension.sh");
+        String path = setupCheckedExtensionPath();
+        Map<String, HostVmStateReportEntry> result = provisioner.getHostVmStateReport(1L, "test-extension", path);
 
         assertNotNull(result);
         assertTrue(result.isEmpty());
-        Mockito.verify(logger).error("Host with ID: {} not found", 1L);
+        verify(logger).error("Host with ID: {} not found", 1L);
     }
 
     @Test
     public void testRunCustomAction() {
+        String path = setupCheckedExtensionPath();
         RunCustomActionCommand cmd = mock(RunCustomActionCommand.class);
         when(cmd.getActionName()).thenReturn("test-action");
         when(cmd.getParameters()).thenReturn(new HashMap<>());
@@ -509,79 +365,30 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(true, "success")).when(provisioner)
             .executeExternalCommand(anyString(), anyString(), anyMap(), anyInt(), anyString(), anyString());
 
-        RunCustomActionAnswer answer = provisioner.runCustomAction("host-name", "test-extension", "test-extension.sh", cmd);
+        RunCustomActionAnswer answer = provisioner.runCustomAction("host-name", "test-extension", path, cmd);
 
         assertTrue(answer.getResult());
-        Mockito.verify(logger).debug("Executing custom action '{}' in the external system", "test-action");
-    }
-
-    @Test
-    public void testPrepareExtensionPath() throws IOException {
-        try (MockedStatic<Script> scriptMock = Mockito.mockStatic(Script.class)) {
-            File mockScript = new File(tempDir, "provisioner.sh");
-            mockScript.createNewFile();
-            scriptMock.when(() -> Script.findScript(anyString(), anyString())).thenReturn(mockScript.getAbsolutePath());
-
-            provisioner.prepareExtensionPath("test-extension", true, "test-extension-new.sh");
-
-            File createdFile = new File(tempDir, "test-extension-new.sh");
-            assertTrue(createdFile.exists());
-        }
-    }
-
-    @Test
-    public void testPrepareExtensionPathNotUserDefined() {
-        provisioner.prepareExtensionPath("test-extension", false, "test-extension-builtin.sh");
-        File createdFile = new File(tempDir, "test-extension-builtin.sh");
-        assertFalse(createdFile.exists());
-    }
-
-    @Test
-    public void testPrepareExtensionPathNotBashScript() {
-        provisioner.prepareExtensionPath("test-extension", true, "test-extension.txt");
-
-        File createdFile = new File(tempDir, "test-extension.txt");
-        assertFalse(createdFile.exists());
-    }
-
-    @Test
-    public void testPrepareExtensionPathFileAlreadyExists() {
-        File existingFile = new File(tempDir, "test-extension.sh");
-
-        provisioner.prepareExtensionPath("test-extension", true, "test-extension.sh");
-
-        assertTrue(existingFile.exists());
-    }
-
-    @Test
-    public void testCleanupExtensionPath() throws IOException {
-        String extensionDirName = Extension.getDirectoryName("test-extension");
-        File extensionDir = new File(tempDir, extensionDirName);
-        extensionDir.mkdirs();
-        File testFile = new File(extensionDir, "test-file.txt");
-        testFile.createNewFile();
-
-        provisioner.cleanupExtensionPath("test-extension", extensionDirName + "/test-file.txt");
-
-        assertFalse(testFile.exists());
-    }
-
-    @Test
-    public void testCleanupExtensionData() throws IOException {
-        File extensionDataDir = new File(tempDataDir, "test-extension");
-        extensionDataDir.mkdirs();
-        File testFile = new File(extensionDataDir, "test-file.txt");
-        testFile.createNewFile();
-
-        provisioner.cleanupExtensionData("test-extension", 1, true);
-
-        assertFalse(extensionDataDir.exists());
+        verify(logger).debug("Executing custom action '{}' in the external system", "test-action");
     }
 
     @Test
     public void testExecuteExternalCommand() throws IOException {
+        when(extensionsFilesystemManager.prepareExternalPayload(anyString(), anyMap())).thenAnswer(
+                invocation -> {
+                    String extensionName = invocation.getArgument(0, String.class);
+                    Map<String, String> details = invocation.getArgument(1, Map.class);
+                    File tempFile = File.createTempFile(extensionName, ".json");
+                    String json = GsonHelper.getGson().toJson(details);
+                    Files.writeString(tempFile.toPath(), json);
+                    tempFile.deleteOnExit();
+                    return tempFile.getAbsolutePath();
+                }
+        );
         String scriptContent = "#!/bin/bash\nif grep -q '{\"test\":\"value\"}' \"$2\"; then\necho 'success'\nexit 0\nelse\necho 'fail'\nexit 1\nfi";
-        Files.write(testScript.toPath(), scriptContent.getBytes());
+        File testScript = File.createTempFile("test-extension", ".sh");
+        Files.writeString(testScript.toPath(), scriptContent);
+        testScript.setExecutable(true);
+        testScript.deleteOnExit();
 
         Map<String, Object> accessDetails = new HashMap<>();
         accessDetails.put("test", "value");
@@ -609,16 +416,8 @@ public class ExternalPathPayloadProvisionerTest {
         String extensionName = "test-extension";
         String action = "status"; // in TRIVIAL_ACTIONS
         String payloadFileName = "/tmp/test-payload.json";
-
-        try (MockedStatic<FileUtil> fileUtilMock = Mockito.mockStatic(FileUtil.class)) {
-            provisioner.deleteExtensionPayloadFile(extensionName, action, payloadFileName);
-
-            fileUtilMock.verify(() -> FileUtil.deletePath(payloadFileName));
-            Mockito.verify(logger).trace(
-                    "Deleting payload file: {} for extension: {}, action: {}, file: {}",
-                    payloadFileName, extensionName, action
-            );
-        }
+        provisioner.deleteExtensionPayloadFile(extensionName, action, payloadFileName);
+        verify(extensionsFilesystemManager).deleteExtensionPayload(extensionName, payloadFileName);
     }
 
     @Test
@@ -626,62 +425,10 @@ public class ExternalPathPayloadProvisionerTest {
         String extensionName = "test-extension";
         String action = "start";
         String payloadFileName = "/tmp/test-payload.json";
-
-        try (MockedStatic<FileUtil> fileUtilMock = Mockito.mockStatic(FileUtil.class)) {
-            provisioner.deleteExtensionPayloadFile(extensionName, action, payloadFileName);
-
-            fileUtilMock.verifyNoInteractions();
-            Mockito.verify(logger, Mockito.never()).trace(anyString(), any(), any(), any(), any());
-        }
-    }
-
-    @Test
-    public void prepareExternalPayloadCreatesFileInNewDirectory() throws IOException {
-        String extensionName = "test-extension";
-        Map<String, Object> details = Map.of("key", "value");
-        String result = provisioner.prepareExternalPayload(extensionName, details);
-        assertNotNull(result);
-        Path payloadFile = Paths.get(result);
-        assertTrue(Files.exists(payloadFile));
-        assertTrue(Files.isRegularFile(payloadFile));
-        assertEquals("{\"key\":\"value\"}", Files.readString(payloadFile));
-    }
-
-    @Test
-    public void prepareExternalPayloadCreatesFileInExistingDirectory() throws IOException {
-        String extensionName = "test-extension";
-        Map<String, Object> details = Map.of("key", "value");
-        Path existingDir = Paths.get(tempDataDir.getAbsolutePath(), extensionName);
-        Files.createDirectories(existingDir);
-        doNothing().when(provisioner).scheduleExtensionPayloadDirectoryCleanup(extensionName);
-        String result = provisioner.prepareExternalPayload(extensionName, details);
-        assertNotNull(result);
-        Path payloadFile = Paths.get(result);
-        assertTrue(Files.exists(payloadFile));
-        assertTrue(Files.isRegularFile(payloadFile));
-        assertEquals("{\"key\":\"value\"}", Files.readString(payloadFile));
-    }
-
-    @Test
-    public void prepareExternalPayloadSchedulesCleanupForExistingDirectory() throws IOException {
-        String extensionName = "test-extension";
-        Map<String, Object> details = Map.of("key", "value");
-        Path existingDir = Paths.get(tempDataDir.getAbsolutePath(), extensionName);
-        Files.createDirectories(existingDir);
-        doNothing().when(provisioner).scheduleExtensionPayloadDirectoryCleanup(extensionName);
-        provisioner.prepareExternalPayload(extensionName, details);
-    }
-
-    @Test(expected = IOException.class)
-    public void prepareExternalPayloadThrowsExceptionWhenFileCannotBeWritten() throws IOException {
-        String extensionName = "test-extension";
-        Map<String, Object> details = Map.of("key", "value");
-        Path existingDir = Paths.get(tempDataDir.getAbsolutePath(), extensionName);
-        Files.createDirectories(existingDir);
-        try (MockedStatic<Files> filesMock = Mockito.mockStatic(Files.class)) {
-            filesMock.when(() -> Files.writeString(any(Path.class), anyString(), eq(StandardOpenOption.CREATE_NEW))).thenThrow(IOException.class);
-            provisioner.prepareExternalPayload(extensionName, details);
-        }
+        provisioner.deleteExtensionPayloadFile(extensionName, action, payloadFileName);
+        verify(logger).trace(
+                "Skipping deletion of payload file: {} for extension: {}, action: {}",
+                payloadFileName, extensionName, action);
     }
 
     @Test
@@ -802,12 +549,13 @@ public class ExternalPathPayloadProvisionerTest {
         VirtualMachineTO result = provisioner.getVirtualMachineTO(vm);
         assertNotNull(result);
         assertEquals(vmTO, result);
-        Mockito.verify(hypervisorGuruManager).getGuru(Hypervisor.HypervisorType.External);
-        Mockito.verify(hypervisorGuru).implement(any(VirtualMachineProfile.class));
+        verify(hypervisorGuruManager).getGuru(Hypervisor.HypervisorType.External);
+        verify(hypervisorGuru).implement(any(VirtualMachineProfile.class));
     }
 
     @Test
     public void getInstanceConsoleReturnsAnswerWhenConsoleDetailsAreValid() {
+        String path = setupCheckedExtensionPath();
         GetExternalConsoleCommand cmd = mock(GetExternalConsoleCommand.class);
         VirtualMachineTO vmTO = mock(VirtualMachineTO.class);
         when(cmd.getVirtualMachine()).thenReturn(vmTO);
@@ -820,7 +568,7 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(true, validOutput)).when(provisioner)
                 .getInstanceConsoleOnExternalSystem(anyString(), anyString(), anyString(), anyMap(), anyInt());
 
-        GetExternalConsoleAnswer result = provisioner.getInstanceConsole("host-name", "test-extension", "test-extension.sh", cmd);
+        GetExternalConsoleAnswer result = provisioner.getInstanceConsole("host-name", "test-extension", path, cmd);
 
         assertNotNull(result);
         assertEquals("127.0.0.1", result.getHost());
@@ -833,7 +581,7 @@ public class ExternalPathPayloadProvisionerTest {
     @Test
     public void getInstanceConsoleReturnsErrorWhenExtensionNotConfigured() {
         GetExternalConsoleCommand cmd = mock(GetExternalConsoleCommand.class);
-        when(provisioner.getExtensionCheckedPath(anyString(), anyString())).thenReturn(null);
+        when(extensionsFilesystemManager.getExtensionCheckedPath(anyString(), anyString())).thenReturn(null);
 
         String extensionName = "test-extension";
         String hostName = "host-name";
@@ -846,6 +594,7 @@ public class ExternalPathPayloadProvisionerTest {
 
     @Test
     public void getInstanceConsoleReturnsErrorWhenExternalSystemFails() {
+        String path = setupCheckedExtensionPath();
         GetExternalConsoleCommand cmd = mock(GetExternalConsoleCommand.class);
         VirtualMachineTO vmTO = mock(VirtualMachineTO.class);
         when(cmd.getVirtualMachine()).thenReturn(vmTO);
@@ -854,7 +603,7 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(false, "External system error")).when(provisioner)
                 .getInstanceConsoleOnExternalSystem(anyString(), anyString(), anyString(), anyMap(), anyInt());
 
-        GetExternalConsoleAnswer result = provisioner.getInstanceConsole("host-name", "test-extension", "test-extension.sh", cmd);
+        GetExternalConsoleAnswer result = provisioner.getInstanceConsole("host-name", "test-extension", path, cmd);
 
         assertNotNull(result);
         assertEquals("External system error", result.getDetails());
@@ -862,6 +611,7 @@ public class ExternalPathPayloadProvisionerTest {
 
     @Test
     public void getInstanceConsoleReturnsErrorWhenConsoleObjectIsMissing() {
+        String path = setupCheckedExtensionPath();
         GetExternalConsoleCommand cmd = mock(GetExternalConsoleCommand.class);
         VirtualMachineTO vmTO = mock(VirtualMachineTO.class);
         when(cmd.getVirtualMachine()).thenReturn(vmTO);
@@ -871,7 +621,7 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(true, invalidOutput)).when(provisioner)
                 .getInstanceConsoleOnExternalSystem(anyString(), anyString(), anyString(), anyMap(), anyInt());
 
-        GetExternalConsoleAnswer result = provisioner.getInstanceConsole("host-name", "test-extension", "test-extension.sh", cmd);
+        GetExternalConsoleAnswer result = provisioner.getInstanceConsole("host-name", "test-extension", path, cmd);
 
         assertNotNull(result);
         assertEquals("Missing console object in output", result.getDetails());
@@ -879,6 +629,7 @@ public class ExternalPathPayloadProvisionerTest {
 
     @Test
     public void getInstanceConsoleReturnsErrorWhenRequiredFieldsAreMissing() {
+        String path = setupCheckedExtensionPath();
         GetExternalConsoleCommand cmd = mock(GetExternalConsoleCommand.class);
         VirtualMachineTO vmTO = mock(VirtualMachineTO.class);
         when(cmd.getVirtualMachine()).thenReturn(vmTO);
@@ -888,7 +639,7 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(true, incompleteOutput)).when(provisioner)
                 .getInstanceConsoleOnExternalSystem(anyString(), anyString(), anyString(), anyMap(), anyInt());
 
-        GetExternalConsoleAnswer result = provisioner.getInstanceConsole("host-name", "test-extension", "test-extension.sh", cmd);
+        GetExternalConsoleAnswer result = provisioner.getInstanceConsole("host-name", "test-extension", path, cmd);
 
         assertNotNull(result);
         assertEquals("Missing required fields in output", result.getDetails());
@@ -896,6 +647,7 @@ public class ExternalPathPayloadProvisionerTest {
 
     @Test
     public void getInstanceConsoleReturnsErrorWhenOutputParsingFails() {
+        String path = setupCheckedExtensionPath();
         GetExternalConsoleCommand cmd = mock(GetExternalConsoleCommand.class);
         VirtualMachineTO vmTO = mock(VirtualMachineTO.class);
         when(cmd.getVirtualMachine()).thenReturn(vmTO);
@@ -905,7 +657,7 @@ public class ExternalPathPayloadProvisionerTest {
         doReturn(new Pair<>(true, malformedOutput)).when(provisioner)
                 .getInstanceConsoleOnExternalSystem(anyString(), anyString(), anyString(), anyMap(), anyInt());
 
-        GetExternalConsoleAnswer result = provisioner.getInstanceConsole("host-name", "test-extension", "test-extension.sh", cmd);
+        GetExternalConsoleAnswer result = provisioner.getInstanceConsole("host-name", "test-extension", path, cmd);
 
         assertNotNull(result);
         assertEquals("Failed to parse output", result.getDetails());
